# aoc_2023

./: pyproject.toml
aoc_2023/: generator.sh
aoc_2023/01/: README.md  puzzle.py
aoc_2023/02/: README.md  puzzle.py
aoc_2023/03/: puzzle.py
aoc_2023/04/: README.md  puzzle.py
aoc_2023/05/: puzzle.py
aoc_2023/06/: README.md  puzzle.py
aoc_2023/07/: README.md  puzzle.py
aoc_2023/15/: puzzle.py
